[package]
name = "todo_yew"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stylist = { version = "0.13.0", features = ["yew", "parser"] }
wasm-bindgen = "0.2.90"
web-sys = { version = "0.3.67", features = ["HtmlInputElement"] }
yew = { version = "0.21.0", features = ["csr"] }
